@@ -32,6 +32,9 @@ synaptic (0.58) UNRELEASED; urgency=low
     - updated (thanks to Vit Pelcak)
   * gtk/rguserdialog.cc, gtk/rggladewindow.cc:
     - do not crash for invalid parent-window-ids
+  * gtk/rgpreferenceswindow.cc:
+    - overwrite the http_proxy environ when the user set the proxy
+      explicitely (thanks to Berend De Schouwer)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  6 Mar 2007 17:22:30 +0100
 
